--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   buildpacks:
     - "https://github.com/heroku/java-buildpack"
 run:
-  web: java -jar target/helloworld-1.0-SNAPSHOT.jar
+  web: /lifecyle/launcher
